<resources>
    <string name="app_name">MobileExercise</string>
    <string name="proceed_with_your">Proceed with your</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
</resources>