<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_85sdp"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline"
        app:srcCompat="@drawable/ic_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblProceedToYour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/proceed_with_your"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/lblProceedToYour" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        android:textSize="@dimen/_18sdp"
        android:drawableEnd="@drawable/ic_user"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_60sdp"
        app:layout_constraintEnd_toStartOf="@+id/leftGuideline"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/lblLogin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="@dimen/_18sdp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@+id/leftGuideline"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/red"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_18sdp"
        android:textAllCaps="false"
        android:text="@string/login"
        android:padding="@dimen/_1sdp"
        app:layout_constraintEnd_toStartOf="@+id/leftGuideline"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toStartOf="@+id/leftGuideline"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>