<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMyAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_7sdp"
        android:text="@string/my_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toStartOf="@+id/leftGuideline"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/ivHome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7sdp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toStartOf="@+id/leftGuideline"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tvMyAccount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7sdp"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toStartOf="@+id/leftGuideline"
        app:layout_constraintStart_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tvSettings" />
</androidx.constraintlayout.widget.ConstraintLayout>